[gd_scene load_steps=2 format=3 uid="uid://uhprlqvs3hv1"]

[ext_resource type="Script" path="res://Script/menu.gd" id="1_35mf5"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35mf5")

[node name="gui_menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -64.0
offset_right = 35.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="gui_menu"]
layout_mode = 2

[node name="Label" type="Label" parent="gui_menu/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="play" type="Button" parent="gui_menu/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="options" type="Button" parent="gui_menu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="exit" type="Button" parent="gui_menu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_right = 126.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="options" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
current_tab = 1
clip_tabs = false

[node name="Volume" type="Button" parent="MarginContainer/options"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Exit" type="Button" parent="MarginContainer/options"]
layout_mode = 2
text = "Go to menu"
metadata/_tab_index = 1

[connection signal="pressed" from="gui_menu/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="gui_menu/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="gui_menu/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/options/Exit" to="." method="_on_button_2_pressed"]
